# VoxelTree

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_SUMMARY.md  README.md  TODO.md  _train_quick.py  benchmark_progressive.py  benchmark_simple.py  blocklist.json  config.evaluation.yaml  config.phase2.yaml  config.yaml  config_16x16.yaml  config_anchor.yaml  config_extended.yaml  config_multi_lod.yaml  config_structure_aware.yaml  create_subset.py  data-cli.py  export_multi_lod.py  finish_split.py  make_first_model.py  pipeline.py  pyproject.toml  quick_verify.py  rcon.py  requirements.txt  run_multi_lod_training.py  run_train.py  run_training.py  servers.yaml  split_data.py  test_flexible_model.py  test_onnx_export.py  test_progressive_pipeline.py  train.py  train_multi_lod.py  train_octree.py  train_progressive_quick.py  (+2 more)
.github/: copilot-instructions.md
VoxelTree/: __main__.py  cli.py  step_runner.py
VoxelTree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: voxy_vocab.json
core/: distill_density_nn.py
docs/: AC.md  CONTRIBUTING.md  ChatGPTconversation.md  DATASET-RESPEC.md  DEPENDENCIES.md  DISTILL_DENSITY_SETUP.md  ENVIRONMENT.md  FEATUREBUNDLE-CACHE.md  IMPLEMENTATION-SUMMARY.md  INTEGRATION-REQUIREMENTS.md  MASTER_PLAN.md  MINECRAFT_TERRAIN_DAG_COMPLETE.md  MODEL-CONTRACT.md  MULTI-LOD-IMPLEMENTATION-SUMMARY.md  NOISE-DESIGN.md  NOISETAP-INTERFACE.md  OCTREE-GENERATION-DESIGN.md  OGN_DUAL_HEAD_REDESIGN.md  PHASE-0B-COMPLETE.md  PHASE-0B-REFLECTIONS.md  PHASE-3.1-REFACTOR.md  PHASE_0_1A_IMPLEMENTATION_SUMMARY.md  PHASE_1_DATA_EXTRACTION.md  PHASE_1_IMPLEMENTATION_INDEX.md  PHASE_1_MASTER_LAUNCH_GUIDE.md  PHASE_1_PARITY_REPORT.md  PHASE_1_PARITY_VERIFICATION.md  PHASE_1_REFINEMENTS.md  PHASE_1_STRATEGIC_MASTER_PLAN.md  PHASE_1_TENSOR_ARCHITECTURE.md  PHASE_1_THROUGH_4.md  PREGEN_NODE_INTEGRATION.md  PRODUCTION-READY-SUMMARY.md  PROJECT-OUTLINE.md  PROJECT_PLAN.md  REFERENCE_PATTERNS_ANALYSIS.md  TRAINING-DATA-PIPELINE-PLAN.md  TRAINING-OVERVIEW.md  VOXY-FORMAT.md  WORLDGEN_PIPELINE.md  (+5 more)
extraction/: __init__.py  chunk_extractor.py
gui/: __main__.py  app.py  dashboard_table.py  detail_panel.py  main_window.py  profile_editor.py  profile_row.py  run_registry.py  run_worker.py  server_manager.py  server_status_bar.py  (+2 more)
(+442 files in other folders)
